# snowflake

./: .env_template  .gitignore  .pre-commit-config.yaml  .sqlfluffignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  STREAMLIT.md  dan-mcp-test-file.txt  databases.tf  main.tf  provider.tf  pyproject.toml  roles.tf  secrets.tf  users.tf  warehouses.tf
.github/: AGENTS.md  CLAUDE.md  CODEOWNERS  pull_request_template.md
_tf_archive/: main.tf  roles.tf
admin/: .sqlfluffignore  AD_setup.sql  AGENTS.md  CLAUDE.md  README.md  backup.sql  clone_db.sql  database.sql  databases.sql  genie_elt.py  genie_setup.sql  governance.sql  grants.sql  integrations.sql  main.tf  nf.sql  nf_elt.py  oauth.sql  policies.sql  recover_setup.sql  role_setup.sql  roles.sql  sage_setup.sql  syn_bronze_silver_elt.sql  synapse_elt.sql  synapse_gold.sql  synapse_setup.sql  tableau_oauth.sql  test_s3_integration.sql  user_setup.sql  users.sql  warehouse_elt.sql  warehouse_setup.sql  warehouses.sql
analytics/: acl.sql  ad_cumulative_volume_by_datatype.sql  ad_node_annotations.sql  adkp_strides_report.ipynb  audit_elt.py  calculate_datasize.sql  exploration.sql  file_download_per_email_domain.sql  find_disjointed_file_name_to_download_name.sql  folder_stats.sql  genie.sql  genie_user_management.sql  hackathon.sql  ip_lookup.py  portal.sql  portal_downloads_etl.sql  portal_elt.py  python_client.sql  recover.sql  syn_usage_report.sql  synapse.sql
data_validation/: README.md  add_ad_portal_validation.py  add_file_validation.py  add_node_validation.py  validation.py
docs/: graph_summary.json  partial_parse.msgpack  run_results.json
elt/: AD_setup.sql  genie_elt.py  genie_setup.sql  nf.sql  portal_elt.py  portal_raw.sql  recover_setup.sql  synapse_elt.sql  synapse_gold.sql  synapse_raw_setup.sql
finance/: Dockerfile  README.md  finance_database_setup.sql  mip_raw_elt_batch.py  requirements.txt
genie/: genie_bpc_elt.py  genie_elt.py
gx/: README.md  validation.py
infrastructure/: R__001_databases.sql  R__002_warehouses.sql  R__003_roles.sql  R__004_users.sql  R__005_integrations.sql  R__006_policies.sql  R__007_grants.sql  R__008_future_grants.sql  schemachange-config-dev.yml  schemachange-config.yml
privileges/: grants.sql
recover/: recover_setup.sql
sage/: AGENTS.md  CLAUDE.md  audit_elt.py  ip_lookup.py  portal_downloads_etl.sql  portal_elt.py  portal_elt.sql  sage_setup.sql  schemachange-config.yml
streamlit_template/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  queries.py  requirements.txt  sample_data_app.py  style.css  utils.py  widgets.py
synapse_data_warehouse/: AGENTS.md  CLAUDE.md  schemachange-config.yml
transform/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  dbt_project.yml  selectors.yml
transforms/: portal_downloads_etl.sql  portal_elt.py  portal_elt.sql  (+3 more)
(+707 files in other folders)
